<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_16dp"
        android:layout_marginTop="@dimen/layout_16dp"
        android:layout_marginEnd="@dimen/layout_16dp"
        android:text="@string/text_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/primary_700"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_16dp"
        android:layout_marginTop="@dimen/layout_8dp"
        android:layout_marginEnd="@dimen/layout_16dp"
        android:autofillHints=""
        android:background="@color/secondary_200"
        android:ems="10"
        android:hint="@string/hint_text"
        android:inputType="number"
        android:padding="2dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/primary_700"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_16dp"
        android:layout_marginTop="@dimen/layout_8dp"
        android:layout_marginEnd="@dimen/layout_16dp"
        android:paddingHorizontal="5dp"
        android:text="@string/text_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editValor"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_16dp"
        android:layout_marginEnd="@dimen/layout_16dp"
        android:layout_marginBottom="@dimen/layout_8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textResp">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_8dp"
                android:contentDescription="@string/cd_imagem_nota_de_1_real"
                app:srcCompat="@drawable/real1"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_8dp"
                android:contentDescription="@string/cd_imagem_nota_de_2_reais"
                app:srcCompat="@drawable/real2"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_8dp"
                android:contentDescription="@string/cd_imagem_nota_de_5_reais"
                app:srcCompat="@drawable/real5"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_8dp"
                android:contentDescription="@string/cd_imagem_nota_de_10_reais"
                app:srcCompat="@drawable/real10"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_8dp"
                android:contentDescription="@string/cd_imagem_nota_de_20_reais"
                app:srcCompat="@drawable/real20"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_8dp"
                android:contentDescription="@string/cd_imagem_nota_de_50_reais"
                app:srcCompat="@drawable/real50"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_8dp"
                android:contentDescription="@string/cd_imagem_nota_de_100_reais"
                app:srcCompat="@drawable/real100"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cd_imagem_nota_de_200_reais"
                app:srcCompat="@drawable/real200"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textUmReal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_52dp"
                android:layout_marginBottom="@dimen/layout_8dp"
                android:gravity="center_vertical|end"
                android:text="@string/text_hint"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textDoisReais"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_52dp"
                android:layout_marginBottom="@dimen/layout_8dp"
                android:gravity="center_vertical|end"
                android:text="@string/text_hint"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textCincoReais"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_52dp"
                android:layout_marginBottom="@dimen/layout_8dp"
                android:gravity="center_horizontal|center_vertical|end"
                android:text="@string/text_hint"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textDezReais"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_52dp"
                android:layout_marginBottom="@dimen/layout_8dp"
                android:gravity="center_vertical|end"
                android:text="@string/text_hint"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textVinteReais"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_52dp"
                android:layout_marginBottom="@dimen/layout_8dp"
                android:gravity="center_vertical|end"
                android:text="@string/text_hint"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textCinquentaReais"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_52dp"
                android:layout_marginBottom="@dimen/layout_8dp"
                android:gravity="center_vertical|end"
                android:text="@string/text_hint"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textCemReais"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_52dp"
                android:layout_marginBottom="@dimen/layout_8dp"
                android:gravity="center_vertical|end"
                android:text="@string/text_hint"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textDuzentosReais"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_52dp"
                android:layout_marginBottom="@dimen/layout_8dp"
                android:gravity="center_vertical|end"
                android:text="@string/text_hint"
                android:textColor="@color/black"
                android:textSize="25sp" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textResp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_8dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FF0000"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>